# Meshwork

./: .gitignore  README.md  TODO.md  compose.yaml
.github/workflows/: build_test_react.yml
.zed/: settings.json
meshwork/backend/: .dockerignore  Dockerfile  app.py  pyproject.toml
meshwork/backend/core/: db_handler.py  graph.py  task.py  user.py
meshwork/frontend/: package-lock.json  package.json
meshwork/frontend/meshwork-ui/: TASKFLOW_README.md  package-lock.json  package.json
meshwork/frontend/meshwork-ui/src/: App.css  App.js  App.test.js
meshwork/frontend/meshwork-ui/src/components/: ContextMenu.js  TaskEditor.js  TaskFlow.js  TaskNode.js
meshwork/frontend/meshwork-ui/src/services/: taskApi.js
meshwork/frontend/meshwork-ui/src/utils/: taskUtils.js
meshwork/frontend/webapp/: Dockerfile  package-lock.json  package.json
meshwork/frontend/webapp/src/lib/: api.ts
meshwork/frontend/webapp/src/routes/: +layout.svelte  +page.svelte
meshwork/frontend/webapp/src/routes/account/: +page.svelte
meshwork/frontend/webapp/src/routes/contact/: +page.svelte
meshwork/frontend/webapp/src/routes/graph/: +page.svelte  TaskNode.svelte
meshwork/frontend/webapp/src/routes/login/: +page.svelte
meshwork/frontend/webapp/src/routes/pricing/: +page.svelte
