[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pydantic>=2.11.5",
    "scipy>=1.15.3",
    "uvicorn>=0.34.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
